--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,9 +1,16 @@
 .page-footer {
-    padding: 3px 0;
+    padding: 3px 0 3px 0;
     height: 38px;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 200px;
 }
 
 .page-footer p{
-    margin: 5px 0;
+    margin: 5px;
     font-size: 16px;
+    
 }
