trying to render background image for banner

--- a/src/components/HomeWrapper/style.css
+++ b/src/components/HomeWrapper/style.css
@@ -1,5 +1,5 @@
 #home.section {
-    background: url(../../images/driftwood-mi.jpg) no-repeat top center/cover;
+    background: url(/driftwood-mi.jpg) no-repeat top center/cover;
     position: relative;
 }
 
